      to...
    - script.in/nsscheck.sh: ... this file.
    - rules.d/debhelper.mk: Replace NSS_CHECK with code from
      script.in/nsscheck.sh.
  * debhelper.in/libc.preinst, debhelper.in/libc.templates: debconfize preinst
    script.
  * patches/localedata/locale-es_CR.diff: new patch to default to am/pm format
    for es_CR locale.  Closes: #466482.
  * control.in/main, sysdeps/amd64.mk, sysdeps/i386.mk: use gcc-4.3 on amd64
    and i386.
  * sysdeps/i386.mk, sysdeps/kfreebsd-i386.mk: use default gcc optimizations
    on i386 and kfreebsd-i386 (-march=i486 -mtune=generic).
  * debian/local/manpages/ldconfig.8: describe --ignore-aux-cache option.
    Closes: #467509.
  * Update Lithuanian debconf translation, by Gintautas Miliauskas.
  * Update Catalan debconf translation, by Jordi Mallach.
  * Update Spanish debconf translation, by Carlos Valdivia Yagüe.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 27 Feb 2008 18:59:12 +0100

glibc (2.7-8) unstable; urgency=low

  * any/cvs/rfc3484.diff: patch from CVS to fix recognition of interface
    family.  Closes: #465583.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 13 Feb 2008 17:12:18 +0100

glibc (2.7-7) unstable; urgency=low

  [ Arthur Loiret ]
  * patches/sh4/cvs-nptl-private-futexes.diff: new patch from CVS to fix
    FTBFS on sh4.

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-epfnosupport.diff: new patch to fix socket()
    error for IPV6.

  [ Aurelien Jarno ]
  * patches/any/local-ldso-disable-hwcap.diff: enable tls/ directory even
    when hardware capabilities are disabled. This workarounds a bug in
    nvidia-glx.  Closes: #453480.
  * patches/mips/local-r10k.diff: new patch from Florian Lohoff to
    workaround LL/SC bug on R10k.  Closes: #462112.
  * patches/mips/submitted-mipsn32.diff: new patch to fix truncate64()
    on MIPS n32.
  * kfreebsd/local-sysdeps.diff: update to revision 2129 (from glibc-bsd).
  * patches/any/cvs-epoll_h.diff: new patch from CVS to define EPOLLRDHUP