@@ -7,8 +7,8 @@ Build-Depends: gettext, make (>= 3.80-1), dpkg-dev (>= 1.13.5), bzip2, lzma, fil
  mig (>= 1.3-2) [hurd-i386], hurd-dev (>= 20020608-1) [hurd-i386], gnumach-dev [hurd-i386],
  kfreebsd-kernel-headers [kfreebsd-i386 kfreebsd-amd64],
  binutils (>= 2.17cvs20070426-1),
- g++-4.2 (>= 4.2.1) [!amd64 !i386], g++-4.2-multilib [kfreebsd-amd64 powerpc ppc64 s390 sparc],
- g++-4.3 [amd64 i386], g++-4.3-multilib [amd64 i386]
+ g++-4.2 (>= 4.2.1) [!amd64 !i386 !kfreebsd-amd64 !kfreebsd-i386], g++-4.2-multilib [powerpc ppc64 s390 sparc],
+ g++-4.3 [amd64 i386 kfreebsd-amd64 kfreebsd-i386], g++-4.3-multilib [amd64 i386 kfreebsd-amd64]
 Build-Depends-Indep: perl, po-debconf (>= 1.0)
 Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
 Uploaders: Ben Collins <bcollins@debian.org>, GOTO Masanori <gotom@debian.org>, Philip Blundell <pb@nexus.co.uk>, Jeff Bailey <jbailey@raspberryginger.com>, Daniel Jacobowitz <dan@debian.org>, Clint Adams <schizo@debian.org>, Aurelien Jarno <aurel32@debian.org>, Pierre Habouzit <madcoder@debian.org>
