@@ -16,8 +16,9 @@ glibc (2.7-9) unstable; urgency=low
     script.
   * patches/localedata/locale-es_CR.diff: new patch to default to am/pm format
     for es_CR locale.  Closes: #466482.
-  * control.in/main, sysdeps/amd64.mk, sysdeps/i386.mk: use gcc-4.3 on amd64
-    and i386.
+  * control.in/main, sysdeps/amd64.mk, sysdeps/i386.mk,
+    sysdeps/kfreebsd-amd64, sysdeps/kfreebsd-i386 : use gcc-4.3 on amd64,
+    i386, kfreebsd-i386 and kfreebsd-amd64.
   * sysdeps/i386.mk, sysdeps/kfreebsd-i386.mk: use default gcc optimizations
     on i386 and kfreebsd-i386 (-march=i486 -mtune=generic).
   * debian/local/manpages/ldconfig.8: describe --ignore-aux-cache option.
